[feature/KernelRelease]: update kernel edition version of English.txt

--- a/src/resources/lang/English.txt
+++ b/src/resources/lang/English.txt
@@ -24,8 +24,6 @@ Are you sure you want to flush all covers?
 
 Are you sure?
 
-Auto Init Network on Boot:
-
 AutoBleem
 
 AutoBleem resume points not available in RetroArch.
@@ -37,8 +35,6 @@ Background Music:
 Backspace
 
 Bin file failed to verify
-
-Bleemsync directory not on USB
 
 Button Guide
 
@@ -98,12 +94,6 @@ Edit game parameters
 
 Edit Memory Card information
 
-Edit Network SSID and Password (ssid.cfg)
-
-Edit Password
-
-Edit SSID
-
 Emulator config MENU
 
 Enter
@@ -116,17 +106,11 @@ Enter new name for card
 
 Enter new name for memory card
 
-Enter Password
-
-Enter SSID
-
 Entry
 
 Exit to EvoUI
 
 Failed to delete
-
-Failed to Initialize Wi-Fi To Network SSID:
 
 Favorite Games
 
@@ -174,6 +158,8 @@ GFX Filter:
 
 Go back
 
+Hardware Information
+
 High res:
 
 In Boot Menu: Safe Power Off The Console
@@ -182,23 +168,11 @@ In Game
 
 In Retroarch Game
 
-Initialize Network
-
-Initialize Wi-Fi Now?
-
-Initialized Wi-Fi To Network SSID:
-
-Initializing Wi-Fi To Network SSID:
-
 Internal
 
 INTERNAL
 
 Internal Games
-
-IP Address:
-
-IP:
 
 Language:
 
@@ -224,8 +198,6 @@ Moving :
 
 Music:
 
-Network SSID
-
 New Card
 
 New GamePad found
@@ -245,8 +217,6 @@ Options
 Original
 
 Page
-
-Password:
 
 pcsx.cfg file not found
 
@@ -362,8 +332,6 @@ SpeedHack:
 
 Spu Interpolation:
 
-SSID:
-
 Starting EvolutionUI
 
 Support via Discord:
@@ -391,12 +359,6 @@ WARNING: NO COVER DB FOUND. PRESS ANY BUTTON.
 WARNING: NO GAMES FOUND. PRESS ANY BUTTON.
 
 Widescreen:
-
-Wi-Fi Connection:
-
-Write connect info to ssid.cfg file
-
-Write ssid.cfg file
 
 Year:
 
