[feature/KernelRelease]: rename "date played" to "last played"

--- a/src/resources/lang/English.txt
+++ b/src/resources/lang/English.txt
@@ -94,6 +94,8 @@ Edit game parameters
 
 Edit Memory Card information
 
+EmulationStation
+
 Emulator config MENU
 
 Enter
@@ -175,6 +177,8 @@ INTERNAL
 Internal Games
 
 Language:
+
+Last Played:
 
 Link Block
 
