[feature/KernelRelease]: renamed "Games filter" to Next Games Platform"

--- a/src/resources/lang/English.txt
+++ b/src/resources/lang/English.txt
@@ -152,8 +152,6 @@ games
 
 Games changed. Press
 
-Games filter
-
 games scanned
 
 GFX Filter:
@@ -205,6 +203,8 @@ Music:
 New Card
 
 New GamePad found
+
+Next Game Platform
 
 No disc name
 
