--- a/src/resources/lang/Polski.txt
+++ b/src/resources/lang/Polski.txt
@@ -24,8 +24,6 @@ Are you sure you want to flush all covers?
 Czy na pewno chcesz wyczyścić wszystkie okładki?
 Are you sure?
 Czy jesteś pewien?
-Auto Init Network on Boot:
-Automatycznie łącz do Sieci na Starcie:
 AutoBleem
 AutoBleem
 AutoBleem resume points not available in RetroArch.
@@ -38,8 +36,6 @@ Backspace
 Backspace
 Bin file failed to verify
 Nie udało się zweryfikować pliku Bin
-Bleemsync directory not on USB
-Brak folderu Bleemsync na USB
 Button Guide
 Opis funkcji
 Cancel
@@ -98,12 +94,8 @@ Edit game parameters
 Edytuj parametry gry
 Edit Memory Card information
 Edytuj informacje Karty Pamięci
-Edit Network SSID and Password (ssid.cfg)
-Edytuj Nazwę Sieci i Hasło (ssid.cfg)
-Edit Password
-Edytuj Hasło
-Edit SSID
-Edytuj SSID
+EmulationStation
+EmulationStation
 Emulator config MENU
 MENU kofiguracji emulatora
 Enter
@@ -126,8 +118,6 @@ Exit to EvoUI
 Powrót do EvoUI
 Failed to delete
 Nieudane usuwanie
-Failed to Initialize Wi-Fi To Network SSID:
-Nieudane Połączenie Wi-Fi do Sieci:
 Favorite Games
 Ulubione Gry
 Favorite:
@@ -166,14 +156,14 @@ games
 gry
 Games changed. Press
 Gry zmienione. Naciśnij
-Games filter
-Filtr gier
 games scanned
 gier znaleziono
 GFX Filter:
 Filtr grafiki:
 Go back
 Powrót
+Hardware Information
+Informacje Sprzętowe
 High res:
 Zwiększ Rozdzielczość:
 In Boot Menu: Safe Power Off The Console
@@ -186,22 +176,16 @@ Initialize Network
 Zainicjuj Sieć
 Initialize Wi-Fi Now?
 Podłączyć teraz Wi-Fi?
-Initialized Wi-Fi To Network SSID:
-Podłączono Wi-Fi do Sieci:
-Initializing Wi-Fi To Network SSID:
-Łączenie Wi-Fi do Sieci:
 INTERNAL
 WEWNĘTRZNA
 Internal
 Wewnętrzna
 Internal Games
 Wewnętrzne Gry
-IP Address:
-Adres IP:
-IP:
-IP:
 Language:
 Język:
+Last Played:
+Ostatnio Grane:
 Link Block
 Polaczony Blok
 Link end Block
@@ -224,12 +208,12 @@ Moving :
 Przenoszenie :
 Music:
 Muzyka:
-Network SSID
-Nazna Sieci (SSID)
 New Card
 Nowa karta
 New GamePad found
 Znaleziono Nowy Kontroler
+Next Game Platform
+Następna Platforma do Gier
 No disc name
 Brak nazwy dysku
 No discs
@@ -246,8 +230,6 @@ Original
 Oryginał
 Page
 Strona
-Password:
-Hasło:
 pcsx.cfg file not found
 Nie znaleziono pliku pcsx.cfg
 Player
@@ -362,14 +344,12 @@ SpeedHack:
 SpeedHack:
 Spu Interpolation:
 Interpolacja Spu:
-SSID:
-SSID:
 Starting EvolutionUI
 Włączam EvolutionUI
 Support via Discord:
 Wsparcie na Discord:
-This is free and open source software. It works AS IS and We take no responsibility for any issues or damage.
-To jest darmowe i wolne oprogramowanie. Nie bierzemy żadnej odpowiedzialności za szkody nim wywołane.
+This is free software. It works AS IS and We take no responsibility for any issues or damage.
+To jest darmowe  oprogramowanie. Działa jak działa. Nie bierzemy odpowiedzialności za szkody nim wywołane
 to scan
 aby przeskanować
 Total:
@@ -390,13 +370,7 @@ WARNING: NO COVER DB FOUND. PRESS ANY BUTTON.
 UWAGA: BRAK BAZY OKŁADEK. NACIŚNIJ DOWOLNY PRZYCISK
 WARNING: NO GAMES FOUND. PRESS ANY BUTTON.
 UWAGA: NIE WYKRYTO GIER. WCIŚNIJ DOWOLNY PRZYCISK.
-Wi-Fi Connection:
-Połączenie Wi-Fi:
 Widescreen:
 Pełny ekran:
-Write connect info to ssid.cfg file
-Zapisz dane połączenia do ssid.cfg
-Write ssid.cfg file
-Zapisz plik ssid.cfg
 Year:
 Rok:
